--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cron": "^1.8.2",
     "moment": "^2.24.0",
     "mysql": "^2.18.1",
     "node-cron": "^2.0.3",
